# openai-apps-sdk-examples

./: .gitignore  main.py  pyproject.toml
doc/: design.md  rs.md
shopping_cart_python/: README.md  main.py
shopping_cart_rust/: Cargo.toml
shopping_cart_rust/assets/: vanilla-shopping-cart.html
shopping_cart_rust/doc/: integration_tests.md  refacto.md
shopping_cart_rust/src/: helpers.rs  lib.rs  main.rs  model.rs
shopping_cart_rust/src/cart/: handlers.rs  helpers.rs  mod.rs  models.rs  state.rs
shopping_cart_rust/src/mcp/: handlers.rs  helpers.rs  mod.rs  models.rs
shopping_cart_rust/src/router/: cart.rs  mcp.rs  mod.rs
shopping_cart_rust/tests/: mcp_integration.rs
src/pizzaz-albums/: AlbumCard.jsx
src/pizzaz-list/: index.jsx
src/shopping-cart/: index.tsx
