[package]
name = "shopping_cart_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
dashmap = "6.0.1"
tower = { version = "0.4.13", features = ["util"] }
futures-util = "0.3.30"
